--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ proof
 node_modules
 package-lock.json
 package.json
-master_ufo
-instance_ufo
+# master_ufo
+# instance_ufo
 
 # OS generated files #
 ######################
